[package]
name = "webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
cryptify = { version = "3.1.1", default-features = false }
serenity = { version = "0.12.4", default-features = false, features = ["rustls_backend", "model"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
whoami = { version ="1.5.2", default-features = false }
